# commonroad-autoware-interface

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  DockerfileAutowareUniverse  README.md  README_FOR_DEVELOPERS.md  SPOT_README.md  ZAM_Lanelet-1_1-T1.xml  cr2autoware_install.sh  docker-entrypoint.sh  mkdocs.yml  tum.commonroad.planning.repos
src/cr2autoware/: cr2autoware_install.sh  package.xml  requirements.txt  setup.cfg  setup.py
src/cr2autoware/config/: avp.rviz
src/cr2autoware/cr2autoware/: configuration.py  cr2autoware.py  cr_route_planner.py  ego_vehicle_handler.py  planning_problem_handler.py  ros_param.yaml  route_planner.py  rp_interface.py  scenario_handler.py  spot_handler.py  tf2_geometry_msgs.py  trajectory_logger.py  trajectory_planner_interface.py  utils.py  velocity_planner.py
src/cr2autoware/cr2autoware.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cr2autoware/cr2autoware/common/: configuration.py
src/cr2autoware/cr2autoware/common/ros_interface/: create.py  helpers.py  specifications.py  specs_base.py  specs_clients.py  specs_publisher.py  specs_subscriptions.py
src/cr2autoware/cr2autoware/common/utils/: cr_conversion_utils.py  debug.py  general.py  geometry.py  message.py  tf2_geometry_msgs.py  transform.py  (+4 more)
src/cr2autoware/cr2autoware/handlers/: base.py  data_generation_handler.py  ego_vehicle_handler.py  planning_problem_handler.py  scenario_handler.py  spot_handler.py
src/cr2autoware/data/: Autoware_Map-1_1.xml  autonomoustuff_parking_lot_lgsvl.pcd
src/cr2autoware/data/sample-map-cr/: lanelet2_map.osm  map_config.yaml  sample-map-cr.xml
src/cr2autoware/data/sample-map-park/: lanelet2_map.osm  map_config.yaml  t4v2.yaml
src/cr2autoware/data/sample-map-planning/: lanelet2_map.osm  sample-map_planning_commonroad.xml
src/cr2autoware/data/sample-map-planning-small/: lanelet2_map.osm
src/cr2autoware/launch/: autoware.launch.xml  autoware_auto_visualization.launch.py  avp_core.launch.py  avp_sim.launch.py  cr2autoware_node.launch.xml  test.launch.py  universe.launch.py
src/cr2autoware/param/: cr2autoware_map_publisher.param.yaml  cr2autoware_param_file.param.yaml  default.yaml  edgar_rp_config.yaml  lanelet2_map_provider.param.yaml  map_publisher_sim.param.yaml
src/cr2autoware/pythonProject/: main.py
src/cr2autoware/scripts/: conversion.py  cr2lanelet.py  lanelet2cr.py  sample-map-planning-double-converted.xml  sample-map-planning-from-double-converted.xml  test_map.ipynb
src/cr2autoware/scripts/data_evaluation/: add_obstacles.py  add_planning_problem.py  add_traffic_lights.py  curvilinear_cartesian.py  data_eval_utils.py  data_evaluation.py  global_timer.py  physics_evaluation.py  rosbag2cr_converter.py  visualization.py
src/cr2autoware/test/: test_func.py  test_rp.py
src/cr2autoware/test/pickle_files/: rp_interface.pkl  rp_interface_curv_proj.pkl  rp_interface_curve.pkl  rp_interface_moving.pkl  rp_interface_obstacle.pkl  rp_interface_spike.pkl  rp_interface_stop.pkl  rp_params.pkl  rp_params_curv_proj.pkl  rp_params_curve.pkl  rp_params_curve.pkl~origin_48-add-velocity-planner  rp_params_moving.pkl  rp_params_obstacle.pkl  rp_params_spike.pkl  rp_params_stop.pkl
src/cr2autoware/test/scenarios/: curve_ZAM_OpenDrive-123.xml
tum_commonroad_planning_launch/: CMakeLists.txt  package.xml
tum_commonroad_planning_launch/config/: motion_velocity_smoother.param.yaml
tum_commonroad_planning_launch/launch/: cr2autoware.launch.xml  planning_simulator.launch.xml  tum_planning_component.launch.xml
(+87 files in other folders)
