<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tum_planning_launch</name>
  <version>0.0.1</version>
  <description>The TUM Commonroad planning launch package</description>
  <maintainer email="commonroad@lists.lrz.de">commonroad</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- TODO: remove exec depends which are not required -->
  <exec_depend>sample_vehicle_description</exec_depend>
  <exec_depend>global_parameter_loader</exec_depend>
  <exec_depend>python3-bson</exec_depend>
  <exec_depend>python3-tornado</exec_depend>
  <exec_depend>tier4_control_launch</exec_depend>
  <exec_depend>tier4_localization_launch</exec_depend>
  <exec_depend>tier4_map_launch</exec_depend>
  <exec_depend>tier4_perception_launch</exec_depend>
  <exec_depend>tier4_planning_launch</exec_depend>
  <exec_depend>tier4_sensing_launch</exec_depend>
  <exec_depend>tier4_simulator_launch</exec_depend>
  <exec_depend>tier4_system_launch</exec_depend>
  <exec_depend>tier4_vehicle_launch</exec_depend>
  <exec_depend>web_controller</exec_depend>
  <exec_depend>cr2autoware</exec_depend>
  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
